2009-12-02  Michael Hutchinson  <mhutchinson@novell.com>

	* Parser/TagDatabaseManager.cs: Name threads to make debugging
	  easier.

2009-12-01  Lluis Sanchez Gual  <lluis@novell.com>

	* Project/CProject.cs:
	* Gui/CompilerPanel.cs:
	* Gui/EditPackagesDialog.cs:
	* Project/CProjectServiceExtension.cs:
	* ProjectPad/ProjectPackagesFolderNodeBuilder.cs: Introduced
	  the ConfigurationSelector class to all methods that
	  previously took a configuration name as string. This
	  eliminates the ambiguity between solution configuration
	  names and project configuration names.

2009-11-20  Michael Hutchinson  <mhutchinson@novell.com>

	* Project/CProject.cs: Track API. Get correct configuration.

2009-11-06  Levi Bard  <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* Parser/CDocumentParser.cs:
	* Parser/TagDatabaseManager.cs: Lock projectinfo on update.

2009-11-06  Levi Bard  <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* Gui/EditPackagesDialog.cs: Don't let bad packages break
	  scanning.

2009-11-06  Levi Bard  <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* Gui/DataProvider.cs: Escape text for parameter completion.

2009-11-05  Lluis Sanchez Gual  <lluis@novell.com>

	* Gui/CompilerPanel.cs:
	* Gui/EditPackagesDialog.cs:
	* ProjectPad/ProjectPackagesFolderNodeBuilder.cs: Use the
	  correct method for getting the active configuration.

2009-10-30  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs:
	* CBinding.addin.xml: Bump MD version.

2009-10-29  Lluis Sanchez Gual  <lluis@novell.com>

	* gtk-gui/generated.cs:
	* gtk-gui/CBinding.AddPathDialog.cs:
	* gtk-gui/CBinding.CompilerPanel.cs:
	* gtk-gui/CBinding.PackageDetails.cs:
	* gtk-gui/CBinding.AddLibraryDialog.cs:
	* gtk-gui/CBinding.EditPackagesDialog.cs:
	* gtk-gui/CBinding.OutputOptionsPanel.cs:
	* gtk-gui/CBinding.CodeGenerationPanel.cs:
	* gtk-gui/CBinding.GeneralOptionsPanel.cs: Flush.

2009-10-13  Lluis Sanchez Gual  <lluis@novell.com>

	* Project/CProject.cs: