@@ -1,3 +1,8 @@
+2010-01-04  Levi Bard  <taktaktaktaktaktaktaktaktaktak@gmail.com>
+
+	* Parser/TagDatabaseManager.cs: Allow parsing of headers
+	  included from packages.
+
 2009-12-02  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* Parser/TagDatabaseManager.cs: Name threads to make debugging
